--- a/gurit induction site/index.html
+++ b/gurit induction site/index.html
@@ -1050,7 +1050,7 @@
             <label>Category
               <input type="text" id="modCategory" placeholder="Safety / HR / Policy..." required />
             </label>
-            <!-- NEW: Video path picker -->
+            <!-- Video path -->
             <label>Video Path (MP4)
               <input type="text" id="modVideoPath" placeholder="videos/safety-induction.mp4" required />
             </label>
@@ -1174,6 +1174,151 @@
 
   <!-- App logic -->
   <script>
+    // ================= GOOGLE SHEETS BACKEND CONFIG =================
+    // 🔧 Replace this with your deployed Apps Script Web App URL
+    const API_URL = "https://script.google.com/macros/s/AKfycbyVP0WUL1jVaLo6kFO3b43dbDtLinJlmxCKD6HA80DqGduR6di3pAd4b-5X09TDEXDz/exec";
+
+    async function sheetPost(action, payload = {}) {
+      try {
+        const res = await fetch(API_URL, {
+          method: "POST",
+          body: JSON.stringify({ action, payload })
+        });
+        const data = await res.json();
+        if (data.status !== 'ok') {
+          console.error('Sheet error:', data.message);
+          throw new Error(data.message || 'Sheet error');
+        }
+        return data.data || null;
+      } catch (err) {
+        console.error('sheetPost failed:', err);
+        throw err;
+      }
+    }
+
+    async function saveUserToSheet(user) {
+      try { await sheetPost('addUser', user); } catch(e) {}
+    }
+    async function saveAttemptToSheet(attempt) {
+      try { await sheetPost('addAttempt', attempt); } catch(e) {}
+    }
+    async function saveModuleToSheet(module) {
+      try { await sheetPost('saveModule', module); } catch(e) {}
+    }
+    async function updateModuleInSheet(module) {
+      try { await sheetPost('updateModule', module); } catch(e) {}
+    }
+    async function deleteModuleFromSheet(id) {
+      try { await sheetPost('deleteModule', { id }); } catch(e) {}
+    }
+
+    const DEFAULT_MODULES = [
+      {
+        id: 'safety-induction',
+        title: 'Safety Induction',
+        category: 'Safety',
+        video: 'videos/safety-induction.mp4',
+        thumbnail: '',
+        passMark: 70,
+        quizTime: 600,
+        questions: [
+          {
+            text: 'What is the first thing you should do in case of a fire?',
+            options: ['Run to the exit', 'Activate the fire alarm', 'Try to put it out yourself', 'Hide under your desk'],
+            correct: 1
+          },
+          {
+            text: 'When should you wear Personal Protective Equipment (PPE)?',
+            options: ['Only when supervisor is watching', 'Only in high-risk areas', 'At all times in designated areas', 'When you feel like it'],
+            correct: 2
+          }
+        ]
+      },
+      {
+        id: 'hr-policies',
+        title: 'HR Policies & Procedures',
+        category: 'HR',
+        video: 'videos/hr-policies.mp4',
+        thumbnail: '',
+        passMark: 80,
+        quizTime: 900,
+        questions: [
+          {
+            text: 'How many days in advance should you apply for leave?',
+            options: ['Same day', 'At least 3 days', 'At least 7 days', 'Whenever convenient'],
+            correct: 2
+          },
+          {
+            text: 'What should you do if you witness harassment at workplace?',
+            options: ['Ignore it', 'Report to HR immediately', 'Confront the person directly', 'Discuss with colleagues'],
+            correct: 1
+          }
+        ]
+      }
+    ];
+
+    function mergeModules(defaults, loaded) {
+      const map = {};
+      defaults.forEach(m => map[m.id] = m);
+      loaded.forEach(m => map[m.id] = m);
+      return Object.values(map);
+    }
+
+    async function loadDataFromSheets() {
+      try {
+        const [usersData, attemptsData, modulesData] = await Promise.all([
+          sheetPost('getUsers').catch(() => []),
+          sheetPost('getAttempts').catch(() => []),
+          sheetPost('getModules').catch(() => [])
+        ]);
+
+        // Users
+        if (Array.isArray(usersData)) {
+          APP_STATE.users = usersData.map(u => ({
+            id: String(u.UserID || '').trim(),
+            name: String(u.Name || '').trim(),
+            department: String(u.Department || '').trim(),
+            doj: u.DOJ ? String(u.DOJ) : ''
+          })).filter(u => u.id);
+        }
+
+        // Attempts
+        if (Array.isArray(attemptsData)) {
+          APP_STATE.attempts = attemptsData.map(a => ({
+            id: String(a.CertID || '').trim(),
+            userId: String(a.UserID || '').trim(),
+            userName: String(a.Name || '').trim(),
+            userDept: String(a.Department || '').trim(),
+            moduleId: String(a.ModuleID || '').trim(),
+            moduleTitle: String(a.ModuleTitle || '').trim(),
+            score: Number(a.Score || 0),
+            passed: (a.Passed === true || a.Passed === 'TRUE' || a.Passed === 'PASS' || a.Passed === 'Yes'),
+            timestamp: a.Timestamp ? String(a.Timestamp) : new Date().toISOString()
+          })).filter(a => a.userId);
+        }
+
+        // Modules
+        let loadedModules = [];
+        if (Array.isArray(modulesData)) {
+          loadedModules = modulesData.map(m => ({
+            id: String(m.ModuleID || '').trim(),
+            title: String(m.Title || '').trim(),
+            category: String(m.Category || '').trim(),
+            video: String(m.Video || '').trim(),
+            thumbnail: '',
+            passMark: Number(m.PassMark || 0),
+            quizTime: Number(m.QuizTime || 0),
+            questions: m.Questions ? JSON.parse(m.Questions) : []
+          })).filter(m => m.id);
+        }
+
+        APP_STATE.modules = mergeModules(DEFAULT_MODULES, loadedModules);
+      } catch (e) {
+        console.error('Error loading data from Sheets:', e);
+        APP_STATE.modules = DEFAULT_MODULES.slice();
+      }
+    }
+
     // ===== APP STATE AND DATA =====
     const APP_STATE = {
       currentUser: null,
@@ -1183,52 +1328,9 @@
       adminLoggedIn: false,
       videoFinished: false,
       maxWatched: 0,
-      modules: JSON.parse(localStorage.getItem('lms_modules')) || [
-        {
-          id: 'safety-induction',
-          title: 'Safety Induction',
-          category: 'Safety',
-          video: 'videos/safety-induction.mp4',
-          thumbnail: '',
-          passMark: 70,
-          quizTime: 600,
-          questions: [
-            {
-              text: 'What is the first thing you should do in case of a fire?',
-              options: ['Run to the exit', 'Activate the fire alarm', 'Try to put it out yourself', 'Hide under your desk'],
-              correct: 1
-            },
-            {
-              text: 'When should you wear Personal Protective Equipment (PPE)?',
-              options: ['Only when supervisor is watching', 'Only in high-risk areas', 'At all times in designated areas', 'When you feel like it'],
-              correct: 2
-            }
-          ]
-        },
-        {
-          id: 'hr-policies',
-          title: 'HR Policies & Procedures',
-          category: 'HR',
-          video: 'videos/hr-policies.mp4',
-          thumbnail: '',
-          passMark: 80,
-          quizTime: 900,
-          questions: [
-            {
-              text: 'How many days in advance should you apply for leave?',
-              options: ['Same day', 'At least 3 days', 'At least 7 days', 'Whenever convenient'],
-              correct: 2
-            },
-            {
-              text: 'What should you do if you witness harassment at workplace?',
-              options: ['Ignore it', 'Report to HR immediately', 'Confront the person directly', 'Discuss with colleagues'],
-              correct: 1
-            }
-          ]
-        }
-      ],
-      attempts: JSON.parse(localStorage.getItem('lms_attempts')) || [],
-      users: JSON.parse(localStorage.getItem('lms_users')) || [],
+      modules: DEFAULT_MODULES.slice(),
+      attempts: [],
+      users: [],
       admins: JSON.parse(localStorage.getItem('lms_admins')) || [
         { username: 'admin', password: 'admin123', role: 'superadmin', lastLogin: null },
         { username: 'hr', password: 'hr123', role: 'admin', lastLogin: null }
@@ -1245,7 +1347,6 @@
       quizTimeRemaining: 0,
       autoNextTimer: null,
       autoNextCountdown: 10,
-      // Chart instances
       charts: {
         passFailChart: null,
         moduleUsageChart: null
@@ -1352,13 +1453,11 @@
 
     const btnBackToModules = document.getElementById('btnBackToModules');
 
-    // NEW: Video controls
     const videoControlsOverlay = document.getElementById('videoControlsOverlay');
     const btnStartVideo = document.getElementById('btnStartVideo');
     const videoProgressBar = document.getElementById('videoProgressBar');
 
-    // ===== EVENT LISTENERS =====
-    document.addEventListener('DOMContentLoaded', initApp);
+    document.addEventListener('DOMContentLoaded', () => { initApp(); });
 
     navNewJoiner.addEventListener('click', () => switchView('newJoiner'));
     navAdmin.addEventListener('click', () => switchView('admin'));
@@ -1368,12 +1467,10 @@
     [ackChk1, ackChk2, ackChk3].forEach(cb => cb.addEventListener('change', updateAckButton));
     btnStartModules.addEventListener('click', showModuleSelection);
 
-    // Video events
     btnStartVideo.addEventListener('click', startVideoPlayback);
     trainingVideo.addEventListener('timeupdate', checkVideoProgress);
     trainingVideo.addEventListener('ended', handleVideoEnded);
 
-    // Enhanced video seeking prevention
     trainingVideo.addEventListener('seeking', function (e) {
       if (!APP_STATE.videoFinished) {
         trainingVideo.currentTime = APP_STATE.maxWatched || 0;
@@ -1383,7 +1480,6 @@
       }
     });
 
-    // Prevent drag/click from performing seek
     trainingVideo.addEventListener('mousedown', function (e) {
       if (!APP_STATE.videoFinished) {
         e.preventDefault();
@@ -1399,7 +1495,6 @@
       }
     });
 
-    // Block keyboard left/right skip
     document.addEventListener('keydown', function (e) {
       if (!APP_STATE.videoFinished &&
           (e.key === 'ArrowLeft' || e.key === 'ArrowRight')) {
@@ -1432,7 +1527,6 @@
 
     btnBackToModules.addEventListener('click', handleBackToModules);
 
-    // Auto-fill video path based on title (default B: videos/<slug>.mp4)
     const modTitleInput = document.getElementById('modTitle');
     const modVideoPathInput = document.getElementById('modVideoPath');
     modTitleInput.addEventListener('blur', () => {
@@ -1443,12 +1537,14 @@
       }
     });
 
-    // ===== INIT APP =====
-    function initApp() {
+    async function initApp() {
       initTheme();
+      loadSettings();
 
       const today = new Date().toISOString().split('T')[0];
       empDOJ.value = today;
+
+      await loadDataFromSheets();
 
       checkReturningUser();
       renderModuleList();
@@ -1465,7 +1561,6 @@
 
       initCharts();
       addQuestionSet();
-      loadSettings();
     }
 
     function loadSettings() {
@@ -1483,9 +1578,7 @@
       document.getElementById('defaultPassMark').value = APP_STATE.settings.defaultPassMark;
     }
 
-    // ===== CHARTS =====
     function initCharts() {
-      // Fix chart initialization with proper variable names
       if (passFailChartCanvas) {
         APP_STATE.charts.passFailChart = new Chart(passFailChartCanvas, {
           type: 'pie',
@@ -1523,7 +1616,7 @@
           options: {
             responsive: true,
             scales: { y: { beginAtZero: true } },
-            plugins: { 
+            plugins: {
               title: { display: true, text: 'Module Usage' },
               legend: { display: false }
             }
@@ -1535,7 +1628,6 @@
     }
 
     function updateCharts() {
-      // Update Pass/Fail Chart
       if (APP_STATE.charts.passFailChart) {
         const passCount = APP_STATE.attempts.filter(a => a.passed).length;
         const failCount = APP_STATE.attempts.filter(a => !a.passed).length;
@@ -1544,14 +1636,12 @@
         APP_STATE.charts.passFailChart.update();
       }
 
-      // Update Module Usage Chart
       if (APP_STATE.charts.moduleUsageChart) {
         const moduleCounts = {};
         APP_STATE.attempts.forEach(a => {
           moduleCounts[a.moduleTitle] = (moduleCounts[a.moduleTitle] || 0) + 1;
         });
 
-        // Sort modules by usage count (descending)
         const sortedModules = Object.entries(moduleCounts)
           .sort((a, b) => b[1] - a[1])
           .reduce((obj, [key, value]) => {
@@ -1565,7 +1655,6 @@
       }
     }
 
-    // ===== RETURNING USER =====
     function checkReturningUser() {
       const lastUserId = localStorage.getItem('lms_last_user_id');
       if (!lastUserId) return;
@@ -1582,7 +1671,6 @@
       infoElement.innerHTML += `<p style="margin-top: 10px; color: var(--success-color); font-weight: 500;">Welcome back, ${user.name}! Your details have been pre-filled.</p>`;
     }
 
-    // ===== QUESTION BUILDER =====
     function addQuestionSet() {
       const questionIndex = questionsContainer.children.length;
       const qs = document.createElement('div');
@@ -1619,7 +1707,6 @@
       });
     }
 
-    // ===== NAVIGATION =====
     function switchView(view) {
       if (view === 'newJoiner') {
         navNewJoiner.classList.add('nav-btn-active');
@@ -1638,10 +1725,9 @@
     function showSection(el){ el.classList.remove('hidden'); }
     function hideSection(el){ el.classList.add('hidden'); }
 
-    // ===== NEW JOINER FLOW =====
-    function handleRegistration(e) {
+    async function handleRegistration(e) {
       e.preventDefault();
-      const existing = APP_STATE.users.find(u => u.id === empID.value);
+      const existing = APP_STATE.users.find(u => u.id === empID.value.trim());
 
       if (existing) {
         APP_STATE.currentUser = existing;
@@ -1652,14 +1738,16 @@
         infoElement.innerHTML = `Welcome back, ${existing.name}! Please select your training module.`;
       } else {
         APP_STATE.currentUser = {
-          name: empName.value,
-          id: empID.value,
-          department: empDept.value,
+          name: empName.value.trim(),
+          id: empID.value.trim(),
+          department: empDept.value.trim(),
           doj: empDOJ.value
         };
         APP_STATE.users.push(APP_STATE.currentUser);
-        localStorage.setItem('lms_users', JSON.stringify(APP_STATE.users));
         localStorage.setItem('lms_last_user_id', APP_STATE.currentUser.id);
+
+        // Save to Google Sheet
+        await saveUserToSheet(APP_STATE.currentUser);
 
         njProfileSummary.textContent = `${APP_STATE.currentUser.name} (${APP_STATE.currentUser.department})`;
         njRegister.classList.add('hidden');
@@ -1743,7 +1831,6 @@
       quizTimer.textContent = '--:--';
       if (APP_STATE.quizTimer) clearInterval(APP_STATE.quizTimer);
 
-      // Show video controls overlay
       videoControlsOverlay.classList.remove('hidden');
 
       njModuleSelect.classList.add('hidden');
@@ -1778,11 +1865,9 @@
       quizForm.dispatchEvent(new Event('submit'));
     }
 
-    // Enhanced video progress tracking
     function checkVideoProgress() {
       if (!trainingVideo.duration) return;
 
-      // Update progress bar
       const progress = (trainingVideo.currentTime / trainingVideo.duration) * 100;
       videoProgressBar.style.width = `${progress}%`;
 
@@ -1790,10 +1875,8 @@
         APP_STATE.maxWatched = trainingVideo.currentTime;
       }
 
-      // Enhanced seeking prevention
       if (!APP_STATE.videoFinished &&
           Math.abs(trainingVideo.currentTime - APP_STATE.maxWatched) > 0.5) {
-
         const safeTime = APP_STATE.maxWatched || 0;
         trainingVideo.currentTime = safeTime;
 
@@ -1836,7 +1919,7 @@
       });
     }
 
-    function handleQuizSubmit(e) {
+    async function handleQuizSubmit(e) {
       e.preventDefault();
       if (!APP_STATE.videoFinished) {
         alert('You must watch the full video before attempting the quiz.');
@@ -1869,8 +1952,11 @@
       };
 
       APP_STATE.attempts.push(attempt);
+
+      // Save to Google Sheet
+      await saveAttemptToSheet(attempt);
+
       APP_STATE.currentAttempt = attempt;
-      localStorage.setItem('lms_attempts', JSON.stringify(APP_STATE.attempts));
 
       showResult(percentage, passed, attempt.id);
     }
@@ -1999,6 +2085,9 @@
               h3 { color: #4a6fc7; margin: 1rem 0; }
               .certificate-footer { display: flex; justify-content: space-between; margin-top: 2rem; }
               .qr-code { width: 120px; height: 120px; background: #f5f5f5; display: flex; align-items: center; justify-content: center; border: 1px solid #ddd; }
+              @media print {
+                body { margin: 0; }
+              }
             </style>
           </head>
           <body>${div.outerHTML}</body>
@@ -2008,7 +2097,6 @@
       win.print();
     }
 
-    // ===== BACK BUTTON =====
     function handleBackToModules() {
       if (APP_STATE.currentAttempt && APP_STATE.currentAttempt.passed) {
         alert('You have already completed this module.');
@@ -2031,7 +2119,6 @@
       showSection(njModuleSelect);
     }
 
-    // ===== ADMIN =====
     function handleAdminLogin(e) {
       e.preventDefault();
       const admin = APP_STATE.admins.find(a => a.username === adminUser.value && a.password === adminPass.value);
@@ -2193,7 +2280,7 @@
       XLSX.writeFile(wb, 'Industrial_Induction_Results.xlsx');
     }
 
-    function handleAddModule(e) {
+    async function handleAddModule(e) {
       e.preventDefault();
       const qs = [...questionsContainer.querySelectorAll('.question-set')];
       const questions = [];
@@ -2232,7 +2319,7 @@
       };
 
       APP_STATE.modules.push(newModule);
-      localStorage.setItem('lms_modules', JSON.stringify(APP_STATE.modules));
+      await saveModuleToSheet(newModule);
 
       addModuleForm.reset();
       document.getElementById('modPassMark').value = APP_STATE.settings.defaultPassMark;
@@ -2269,13 +2356,13 @@
       addModuleForm.scrollIntoView();
       const btn = addModuleForm.querySelector('button[type="submit"]');
       btn.textContent = 'Update Module';
-      btn.onclick = (e) => {
+      btn.onclick = async (e) => {
         e.preventDefault();
-        updateModule(moduleId);
+        await updateModule(moduleId);
       };
     }
 
-    function updateModule(moduleId) {
+    async function updateModule(moduleId) {
       const idx = APP_STATE.modules.findIndex(m => m.id === moduleId);
       if (idx === -1) return;
 
@@ -2313,7 +2400,8 @@
         questions
       };
 
-      localStorage.setItem('lms_modules', JSON.stringify(APP_STATE.modules));
+      await updateModuleInSheet(APP_STATE.modules[idx]);
+
       addModuleForm.reset();
       questionsContainer.innerHTML = '';
       addQuestionSet();
@@ -2325,10 +2413,10 @@
       alert('Module updated successfully!');
     }
 
-    function deleteModule(moduleId) {
+    async function deleteModule(moduleId) {
       if (!confirm('Are you sure you want to delete this module?')) return;
       APP_STATE.modules = APP_STATE.modules.filter(m => m.id !== moduleId);
-      localStorage.setItem('lms_modules', JSON.stringify(APP_STATE.modules));
+      await deleteModuleFromSheet(moduleId);
       renderModuleList();
       alert('Module deleted successfully!');
     }
@@ -2356,7 +2444,6 @@
       alert('Settings saved successfully!');
     }
 
-    // expose some functions to inline handlers
     window.deleteAdmin = deleteAdmin;
     window.editModule = editModule;
     window.deleteModule = deleteModule;
